Sources/OpenDDSharp/OpenDDS/RTPS/RtpsDiscovery.cs


    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetPG", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetPG(IntPtr mi, ushort value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetD0", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort GetD0(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetD0", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetD0(IntPtr mi, ushort value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetD1", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort GetD1(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetD1", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetD1(IntPtr mi, ushort value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetDX", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort GetDX(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetDX", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetDX(IntPtr mi, ushort value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetTtl", CallingConvention = CallingConvention.Cdecl)]
    public static extern byte GetTtl(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetTtl", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetTtl(IntPtr mi, byte value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetSedpLocalAddress", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetSedpLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetSedpLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetSedpLocalAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetSpdpLocalAddress", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetSpdpLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetSpdpLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetSpdpLocalAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetSedpMulticast", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool GetSedpMulticast(IntPtr mi);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetSedpMulticast", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetSedpMulticast(IntPtr mi, [MarshalAs(UnmanagedType.I1)] bool value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetMulticastInterface", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetMulticastInterface(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetMulticastInterface", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetMulticastInterface(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetDefaultMulticastGroup", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetDefaultMulticastGroup(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetDefaultMulticastGroup", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetDefaultMulticastGroup(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetSpdpSendAddrs", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetSpdpSendAddrs(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_GetGuidInterface", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GetGuidInterface(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "RtpsDiscovery_SetGuidInterface", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetGuidInterface(IntPtr ird, string ip);
#endif
}
#endregion